# DSTR-Assignment-2

./: .gitattributes  .gitignore  Main  Main.cpp  README.md  log.txt  match_history.txt  player.txt
dev/: CMakeLists.txt  CMakePresets.json  vcpkg.json
dev/include/algorithms/: Sort.hpp
dev/include/controllers/: BracketManager.hpp  Knockout.hpp  KnockoutRound.hpp  MatchHistoryTracker.hpp  MatchScheduler.hpp  Qualifiers.hpp  RoundRobin.hpp  SeedingQueue.hpp  TicketingSystem.cpp  TicketingSystem.hpp  WithdrawalManager.hpp
dev/include/core/: UUID.hpp
dev/include/core/utils/: Assert.hpp
dev/include/data_structures/: CircularQueue.hpp  PriorityQueue.hpp  Queue.hpp  Stack.hpp  Vector.cpp  Vector.hpp
dev/include/data_structures/iterators/: BidirectionalIterator.hpp  ForwardIterator.hpp  Iterator.hpp  RandomAccessIterator.hpp
dev/include/data_structures/linked_lists/: DoublyLinkedList.cpp  DoublyLinkedList.hpp  DoublyLinkedListNode.cpp  DoublyLinkedListNode.hpp  LinkedList.cpp  LinkedList.hpp  LinkedListNode.hpp  SinglyCircularLinkedList.hpp  SinglyLinkedList.hpp  (+1 more)
dev/include/models/: Match.hpp  Player.hpp  Spectator.hpp  Ticket.hpp  Tournament.hpp
dev/src/: CMakeLists.txt  Main  Main.cpp
dev/src/controllers/: BracketManager.cpp  MatchHistoryTracker.cpp  MatchScheduler.cpp  TicketingSystem.cpp  WithdrawalManager.cpp
dev/src/core/: UUID.cpp
dev/src/data_structures/: CircularQueue.cpp  PriorityQueue.cpp  Queue.cpp  Stack.cpp
dev/src/models/: Match.cpp  Player.cpp  Spectator.cpp  Ticket.cpp  Tournament.cpp
dev/tests/: CMakeLists.txt  test_main.cpp
(+191 files in other folders)
